crates/lash/tests/ui/children_start_turn_is_not_public.rs
async fn check(session: lash::LashSession, request: lash_core::SessionTurnRequest<'_>) {
    let _ = session.admin().children().start_turn(request).await;
}

fn main() {}
